--- a/Movie/View/PageOneViewController.xib
+++ b/Movie/View/PageOneViewController.xib
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="imagemSearch" destination="BVI-Br-t9B" id="jQs-YD-t6c"/>
                 <outlet property="labelDescricaoSearch" destination="qFn-Id-WSe" id="C4O-tT-6tK"/>
+                <outlet property="labelTitulo" destination="vAv-ff-ZUn" id="8kq-pQ-qBD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Barra de pesquisa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAv-ff-ZUn">
-                    <rect key="frame" x="83" y="85" width="157" height="30"/>
+                    <rect key="frame" x="83" y="90" width="157" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="17"/>
                     <nil key="highlightedColor"/>
